# LensChecks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Modules/: config.yml  module_1.py  requirements.txt  start.py  update.sh
Modules/src/: 01_00_Concat_Files.ipynb  01_00_Concat_Files_old.ipynb  LP.py  all_modules.ipynb  utils.py
Modules/src/module_1/: 01_00_Concat_Files.ipynb  01_00_Concat_Files_old.ipynb  LP.py  all_modules.ipynb  main.ipynb  main.py
Modules/src/module_2/: Modules.lnk  SDF.xlsx  funcs_2026.parquet  inference.py  main.py  model.py  pipeline.py  src.lnk
Modules/src/module_2/function_model/: clean_utils.py  inference.py  inference_function_model.ipynb
Modules/src/module_2/past_year/: 3Logic_Group_Salary data_rus_2025.xlsx
Modules/src/module_3/: main.py
Modules/src/module_4/: Feature_buildnew.py  Grade_Inference_Code.ipynb  grade_utils.py  inference_grades.py  main.py  main_old.py  model.py  test.ipynb
Modules/src/module_4/grade_model/: Grade_le_grade.pkl  Grade_le_headcount_cat.pkl  Grade_le_revenue_cat.pkl  bp_boxcox_transformer.pkl  codes.json
Modules/src/module_5/: main.py
scripts/: download_weights.py  weights_codes.json  weights_grades.json
src/: config.yml  start.py
src/modules/: utils.py
src/modules/module_1/: main.py
src/modules/module_2/: main.py  model.py  pipeline.py
src/modules/module_3/: main.py
src/modules/module_4/: main.py  model.py  model_1.py  model_2.py  pipeline.py  utils_1.py
src/modules/module_5/: intervals.parquet  main.py
tests/: test_run_checks.py
(+18 files in other folders)
